# stacks-core

./: .gitignore  Cargo.toml
.cargo/: config.toml
clarity/: Cargo.toml  build.rs
clarity-types/: Cargo.toml
clarity-types/src/errors/: mod.rs
clarity-wasm/clar2wasm/: Cargo.toml
clarity-wasm/clar2wasm/src/: tools.rs
clarity-wasm/clar2wasm/src/words/: contract.rs
clarity/benches/: comparison.rs
clarity/src/vm/: contexts.rs  contracts.rs  errors.rs  mod.rs
clarity/src/vm/database/: clarity_db.rs
clarity/src/vm/tests/: contracts.rs
clarity/src/vm/wasm/: copy.rs  cost.rs  datastore.rs  deserialize.rs  duck_type.rs  error_mapping.rs  initialize.rs  linker.rs  mod.rs  serialize.rs  test_utils.rs  tools.rs  wasm_generator.rs  wasm_utils.rs
clarity/src/vm/wasm/clar2wasm/src/: cost.rs  initialize.rs  linker.rs  tools.rs  wasm_generator.rs
clarity/src/vm/wasm/clar2wasm/tests/oom-checker/: main.rs  unit_tests.rs
clarity/src/vm/wasm/cost/: clar1.rs  clar2.rs  clar3.rs
clarity/src/vm/wasm/standard/: standard.wasm
clarity/src/vm/wasm/words/: arithmetic.rs  bindings.rs  bitwise.rs  blockinfo.rs  buff_to_integer.rs  comparison.rs  conditionals.rs  consensus_buff.rs  constants.rs  contract.rs  control_flow.rs  conversion.rs  data_vars.rs  default_to.rs  enums.rs  equal.rs  functions.rs  hashing.rs  logical.rs  maps.rs  mod.rs  noop.rs  options.rs  principal.rs  print.rs  responses.rs  secp256k1.rs  sequences.rs  stx.rs  tokens.rs  traits.rs  tuples.rs
clarity/tests/: boot_contracts_tests.rs  lib.rs  lib_tests.rs
clarity/tests/oom-checker/: main.rs  unit_tests.rs
clarity/tests/standard/: property_tests.rs  unit_tests.rs  utils.rs
clarity/tests/wasm-generation/: arithmetic.rs  bindings.rs  bitwise.rs  blockinfo.rs  comparison.rs  conditionals.rs  consensus_buff.rs  constants.rs  contracts.rs  control_flow.rs  copy.rs  default_to.rs  equal.rs  function_calls.rs  functions.rs  hashing.rs  maps.rs  noop.rs  optional.rs  principal.rs  print.rs  regression.rs  response.rs  secp256k1.rs  sequences.rs  serialization_size.rs  stx.rs  tokens.rs  traits.rs  tuple.rs  values.rs
contrib/stacks-bench-wasm/: Cargo.toml  README.md
contrib/stacks-bench-wasm/src/: db.rs  lib.rs  main.rs  plot.rs
contrib/stacks-inspect/: Cargo.toml
stacks-common/: Cargo.toml
stackslib/: Cargo.toml
stackslib/src/chainstate/stacks/db/: transactions.rs
stackslib/src/clarity_vm/database/: marf.rs
stackslib/src/clarity_vm/tests/: forking.rs  large_contract.rs
