[workspace]
resolver = "2"
members = [
    "stackslib",
    "stacks-common",
    "pox-locking",
    "clarity-types",
    "clarity",
    "stx-genesis",
    "libstackerdb",
    "libsigner",
    "stacks-signer",
    "stacks-node",
    "contrib/stacks-inspect",
    "contrib/stacks-cli"
]

exclude = ["contrib/tools/config-docs-generator"]

# Dependencies we want to keep the same between workspace members
[workspace.dependencies]
assert-json-diff = "1.0.0"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
chrono = "0.4.20"
clap = "4.3.17"
criterion = "0.5"
ed25519-dalek = { version = "2.1.1", default-features = false }
getrandom = "0.2"
hashbrown = "0.15.2"
hex = "0.4.3"
integer-sqrt = "0.1.3"
lazy_static = "1.4.0"
mutants = "0.0.3"
num-integer = { version = "0.1.45", default-features = false }
paste = "1"
pprof = "0.14"
predicates = "3.1.0"
proptest  = { version = "1.6.0", default-features = false }
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
regex = "1.9.1"
rstest = "0.17.0"
rstest_reuse = "0.5.0"
rusqlite = "0.31.0"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
serde_stacker = "0.1"
sha2 = "0.10.7"
slog = "2.5.2"
thiserror = "1.0.65"
tikv-jemallocator = "0.5.4"
toml = "0.5.6"
walrus = "0.20.1"
wasmparser = "0.207.0"
wasmtime = "15.0.0"
wat = "1.0.74"

# Use a bit more than default optimization for
# dev builds to speed up test execution
[profile.dev]
opt-level = 1

# Use release-level optimization for dependencies
# This slows down "first" builds on development environments,
# but won't impact subsequent builds.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

# Release build with less LTO
# Useful for faster builds or low-RAM environments
[profile.release-lite]
inherits = "release"
lto = "thin"

# faster tests for `insta` https://docs.rs/insta/1.43.2/insta/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
