[package]
name = "clarity"
version = "2.3.0"
authors = [
  "Jude Nelson <jude@stacks.org>",
  "Aaron Blankstein <aaron@blockstack.com>",
  "Ludo Galabru <ludovic@blockstack.com>",
]
license = "GPL-3.0-only"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Reference implementation of the Clarity virtual machine"
keywords = ["stacks", "stx", "bitcoin", "crypto", "blockchain"]
readme = "README.md"
edition = "2021"
resolver = "2"
build = "build.rs"

[lib]
name = "clarity"
path = "src/libclarity.rs"

[[bin]]
name = "clar2wasm"
path = "src/bin/main.rs"
required-features = ["clarity-wasm"]

[[bin]]
name = "crosscheck"
path = "src/bin/crosscheck.rs"
required-features = ["clarity-wasm"]

[[bench]]
name = "comparison"
harness = false
required-features = ["clarity-wasm"]

[dependencies]
clarity-types = { package = "clarity-types", path = "../clarity-types", default-features = false }
stacks-common = { package = "stacks-common", path = "../stacks-common", default-features = false }

integer-sqrt = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["unbounded_depth"] }
slog = { workspace = true }

rstest = { workspace = true, optional = true }
rstest_reuse = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

# clarity-wasm
chrono = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
getrandom = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

sha2 = { workspace = true, optional = true }
walrus = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
clarity = { path = ".", features = ["developer-mode"] }
assert-json-diff = { workspace = true }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
clarity-types = { package = "clarity-types", path = "../clarity-types", default-features = false, features = ["testing"] }
criterion = { workspace = true }
hex =  { workspace = true }
mutants = { workspace = true }
num-integer = { workspace = true }
paste = { workspace = true }
pprof =  { workspace = true, features = [
  "flamegraph",
  "protobuf-codec",
  "criterion",
  "frame-pointer"
] }
predicates = { workspace = true }
proptest = { workspace = true, features = ["std"] }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
wasmparser = { workspace = true }

[build-dependencies]
wat = { workspace = true }

# a nightly rustc regression (35dbef235 2021-03-02) prevents criterion from compiling
#  but it isn't necessary for tests: only benchmarks. therefore, commenting out for now.
# criterion = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
serde_stacker =  { workspace = true, optional = true }

[features]
developer-mode = ["stacks-common/developer-mode", "clarity-types/developer-mode"]
slog_json = ["stacks-common/slog_json"]
rusqlite = ["stacks-common/rusqlite", "clarity-types/rusqlite", "dep:rusqlite"]
testing = ["rusqlite", "rstest", "rstest_reuse", "clarity-types/testing"]
devtools = []
rollback_value_check = []
disable-costs = []
wasm-web = ["stacks-common/wasm-web", "clarity-types/wasm-web"]

# clarity-wasm
default = ["rusqlite", "clarity-wasm", "serde_stacker", "vrf"]
clarity-wasm = ["wasmtime", "clarity-types/clarity-wasm", "clap", "walrus", "chrono", "sha2"]
vrf = ["stacks-common/vrf"]
wasm = ["stacks-common/wasm", "developer-mode", "getrandom"]
flamegraph = []
pb = []

# Test-specific features

# Clarity version to test - default v2
test-clarity-v1 = []
test-clarity-v2 = []
test-clarity-v3 = []
