[package]
name = "stacks-bench-wasm"
description = "Run and persist comparative benchmarks of the interpreter vs. the WASM runtime"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
rusqlite = { workspace = true, features = ["functions"] }
plotters = { version = "0.3.7" }
clar2wasm = { git = "https://github.com/stx-labs/clarity-wasm.git", branch = "sync-wasm-develop"}

[dependencies.libstackerdb]
path = "../../libstackerdb"
default-features = false 

[dependencies.stackslib]
package = "stackslib"
path = "../../stackslib"
default-features = false

[dependencies.stacks-common]
path = "../../stacks-common"
default-features = false

[features]
clarity-wasm = ["stackslib/clarity-wasm", "stacks-common/clarity-wasm"]
